Fixing white space

--- a/css/dropit.css
+++ b/css/dropit.css
@@ -58,3 +58,54 @@
     font-family: "Roboto Slab", Times, Georgia, serif;
     font-weight: 400;
 }
+
+.account.dropit {
+    list-style: none;
+    padding: 0;
+    margin: 15px 0;
+    float: right;
+    display: inline-block;
+}
+.account.dropit .dropit-trigger { position: relative; }
+.account.dropit .dropit-submenu {
+    position: absolute;
+    top: 100%;
+    right: 0; /* dropdown left or right */
+    z-index: 1000;
+    display: none;
+    min-width: 200px;
+    list-style: none;
+    padding: 20px;
+    margin: 20px 0 0;
+}
+.account.dropit .dropit-open .dropit-submenu {
+    display: block;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
+    border-radius: 4px;
+}
+.account.dropit .dropit-open .dropit-submenu:after {
+    content: " ";
+    position: absolute;
+    border-style: solid;
+    border-width: 0 8px 8px;
+    border-color: #FFFFFF transparent;
+    display: block;
+    width: 0;
+    z-index: 1;
+    top: -8px;
+    right: 10px;
+}
+.account.dropit .dropit-open .dropit-submenu li {
+    display: block;
+    margin-bottom: 20px;
+}
+.account.dropit .dropit-open .dropit-submenu li:last-child {
+    margin-bottom: 0px;
+}
+.account.dropit .dropit-open .dropit-submenu li a {
+    color:#282828;
+    text-decoration: none;
+    font-family: "Roboto Slab", Times, Georgia, serif;
+    font-weight: 400;
+}
